# pan123-rs

./: .gitignore  BUILD.md  CLI_IMPROVEMENTS.md  Cargo.toml  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_PERMISSIONS.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  README_IMPROVEMENTS.md  SUMMARY.md  pan123_sdk.py
.claude/: settings.local.json
.github/: ACTIONS.md
.github/workflows/: ci.yml  release.yml
crates/pan123-cli/: Cargo.toml
crates/pan123-cli/src/: cli copy.rs  cli.rs  icons.rs  main.rs
crates/pan123-sdk/: Cargo.toml
crates/pan123-sdk/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  rate_limiter.rs  secure_storage.rs  transfer.rs
examples/: complete_usage.rs  test_improvements.rs
scripts/: build.ps1  build.sh
