[workspace]
members = [
  "crates/pan123-sdk",
  "crates/pan123-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = []

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
md5 = "0.8"
owo-colors = "4.1"
qrcode = { version = "0.14", default-features = false }
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
