[workspace]
members = [
  "crates/pan123-sdk",
  "crates/pan123-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = []

[workspace.dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
indicatif = "0.17"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
md5 = "0.8"
owo-colors = "4.1"
qrcode = { version = "0.14", default-features = false }
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shlex = "1.3"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
